Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.20
-
Fix Version/s: 10.1.22
-
Component/s: Galera
-
Labels:
-
Environment:Ubuntu Trusty. Galera 25.3.17
-
Sprint:10.2.4-1, 10.2.4-2
Description
Reproduce steps:
1. Create a 3 node galera cluster
2. Set wsrep_max_ws_rows to a non-zero value
3. Create a table with more than wsrep_max_ws_rows in it
4. Perform an alter table statement on that table. It will get rejected with:
ERROR 1180 (HY000): wsrep_max_ws_rows exceeded done
5. The node you were connected to will still have the old table schema, but the other nodes have successfully applied the alter table changes.
At that point any data written to that table will cause the other nodes to terminate due to inconsistency.
Codership was able to verify the issue, but say it is a MariaDB specific bug:
https://groups.google.com/forum/#!topic/codership-team/TDscBC_oAk4
Attachments
Issue Links
- links to