sql/handler.cc
@@ -5726,6 +5726,8 @@ static int write_locked_table_maps(THD *thd)
 
 typedef bool Log_func(THD*, TABLE*, bool, const uchar*, const uchar*);
 
+static int check_wsrep_max_ws_rows();
+
 static int binlog_log_row(TABLE* table,
                           const uchar *before_record,
                           const uchar *after_record,
@@ -5765,6 +5767,13 @@ static int binlog_log_row(TABLE* table,
       bool const has_trans= thd->lex->sql_command == SQLCOM_CREATE_TABLE ||
                             table->file->has_transactions();
       error= (*log_func)(thd, table, has_trans, before_record, after_record);
+
+      /*
+        Now that the record has been logged, increment wsrep_affected_rows and
+        also check whether its within the allowable limits (wsrep_max_ws_rows).
+      */
+      if (error == 0)
+        error= check_wsrep_max_ws_rows();
     }
   }
   return error ? HA_ERR_RBR_LOGGING_FAILED : 0;
@@ -5923,7 +5932,7 @@ int handler::ha_write_row(uchar *buf)
     DBUG_RETURN(error); /* purecov: inspected */
 
   DEBUG_SYNC_C("ha_write_row_end");
-  DBUG_RETURN(check_wsrep_max_ws_rows());
+  DBUG_RETURN(0);
 }
 
 
@@ -5954,7 +5963,7 @@ int handler::ha_update_row(const uchar *old_data, uchar *new_data)
   rows_changed++;
   if (unlikely(error= binlog_log_row(table, old_data, new_data, log_func)))
     return error;
-  return check_wsrep_max_ws_rows();
+  return 0;
 }
 
 int handler::ha_delete_row(const uchar *buf)
@@ -5981,7 +5990,7 @@ int handler::ha_delete_row(const uchar *buf)
   rows_changed++;
   if (unlikely(error= binlog_log_row(table, buf, 0, log_func)))
     return error;
-  return check_wsrep_max_ws_rows();
+  return 0;
 }
 
 
